# work-codex

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md  settings.json
agent-exchange/: README.md
codex-assets/: README.md
coldstorm/: CLAUDE.md
docs/: agent-cooperation.md  bloomflow-openclaw-gap-analysis-2026-03-11.md  bloomflow-system-brief-2026-03-10.md  claude-codex-exchange-spec.md  codex-native.md  github-setup.md  law-agent.md  litigation-agent.md  portability.md  roadmap.md  ton-daily-operating-procedure.md
knowledge/: agentic-legal-ai-landscape-2026-03-06.md  ai-consulting-job-listings-2026-02-23.md  ai-hiring-trackers-2026-02-25.md  ai-legal-tech-market-research-2026-03-04.md  alberta-litigation-path-analysis-2026-03-01.md  axxela-circumvention-damages-analysis-2026-03-01.md  bdc-loan-application-brief-2026-03-04.md  biglaw-litigation-tech-stack-2026-03-06.md  canadian-litigation-self-study-roadmap-2026-03-06.md  circumvention-settlement-intelligence-research-2026-02-24.md  clean-growth-hub-and-innovation-canada-guide-2026-03-04.md  compliance-monitoring-sar-automation-research-2026-03-03.md  crypto-blockchain-forensics-landscape-2026-03-03.md  elite-litigation-methodology-masterclass-2026-03-06.md  fresh-job-listings-2026-02-24.md  job-search-remote-ai-2026.md  mccarthy-tetrault-profile-2026-02-28.md  non-repayable-grants-deep-dive-2026-03-04.md  nrg-bloom-corporate-tax-filing-guide-2026-02-25.md  osint-due-diligence-automation-research-2026-03-03.md  osint-edd-investigation-market-competitive-analysis-2026-03-06.md  (+3 more)
(+308 files in other folders)
